versions/v2.9/modules/en/pages/cluster-deployment/infra-providers/digitalocean/node-template-configuration.adoc
= DigitalOcean Node Template Configuration
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: reference-guides/cluster-configuration/downstream-cluster-configuration/node-template-configuration/digitalocean 
:product-path: cluster-deployment/infra-providers/digitalocean/node-template-configuration

Account access information is stored as a cloud credential. Cloud credentials are stored as Kubernetes secrets. Multiple node templates can use the same cloud credential. You can use an existing cloud credential or create a new one.

== Droplet Options

The *Droplet Options* provision your cluster's geographical region and specifications.

== Docker Daemon

If you use Docker, the https://docs.docker.com/engine/docker-overview/#the-docker-daemon[Docker daemon] configuration options include:

* *Labels:* For information on labels, refer to the https://docs.docker.com/config/labels-custom-metadata/[Docker object label documentation.]
* *Docker Engine Install URL:* Determines what Docker version will be installed on the instance.
* *Registry mirrors:* Docker Registry mirror to be used by the Docker daemon
* *Other advanced options:* Refer to the https://docs.docker.com/engine/reference/commandline/dockerd/[Docker daemon option reference].
